<resources>
    <string name="app_name">Application</string>
    <string name="LOGIN">Se connecter</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Mot de passe</string>
    <string name="login">Se cennecter</string>
    <string name="logout">Se déconnecter</string>
    <string name="welcome">Bienvenue !</string>
    <string name="textview"></string>
    <string name="emptyvalues">Email et mot de passe ne doivent pas etre vide</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>